# llamafarm

./: .dockerignore  .editorconfig  .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  INSTALL.md  LICENSE  NOTICES  README.md  install.sh  llamafarm-complete-setup.sh  nx.json  release-please-config.json
config/: README.md  __init__.py  compile_schema.py  config_types.py  datamodel.py  example.py  generate-types.sh  generate_types.py  generator.py  loader.py  project.json  pyproject.toml  schema.yaml
config/helpers/: generator.py  loader.py
config/templates/: default.yaml
config/tests/: __init__.py  conftest.py  invalid_config.yaml  minimal_config.yaml  run_tests.py  sample_config.toml  sample_config.yaml  test_config_loader.py  test_config_writer.py  test_edge_cases.py  test_integration.py
models/: INTEGRATION.md  README.md  STRUCTURE.md  __init__.py  cli.py  default_strategies.yaml  demo_basic_config.yaml  demo_ollama_config.yaml  demo_production_config.yaml  model_catalog.yaml  pyproject.toml  schema.yaml  setup.py  setup_and_demo.sh
models/components/: __init__.py  base.py  factory.py  setup_manager.py
models/config/: default.yaml  use_case_examples.yaml
models/config_examples/: README.md
models/core/: __init__.py  config_loader.py  model_manager.py  strategy_manager.py
models/datasets/: README.md
models/demos/: README.md  create_data_split.py  demo1_cloud_fallback.py  demo2_multi_model.py  demo3_training.py  demo_mock_model.py  run_all_demos.py  strategies.yaml
models/docs/: ALL_WORKING_CONFIRMED.md  ARCHITECTURE.md  CLI.md  GETTING_STARTED.md  STRATEGIES.md  TRAINING.md  WORKING_API_CALLS.md
models/example_strategies/: 01_basic_openai.yaml  02_ollama_local.yaml  03_anthropic_claude.yaml  04_multi_cloud_providers.yaml  05_fine_tuning_workflows.yaml  06_huggingface_models.yaml  07_rag_pipelines.yaml  08_production_deployments.yaml  09_specialized_domains.yaml  10_development_testing.yaml  MIGRATION_GUIDE.md  README.md  SUMMARY.md  local_inference_engines.yaml  test_loading.py  validate_strategies.py
models/examples/: demo_engines_config.json  demo_hf_config.json  demo_multi_config.json
models/registry/: README.md
models/tests/: run_integration_tests.py  test_cli_mock.py  test_components.py  test_e2e.py  test_example_strategies.py  test_fixed_model.py  test_integration.py  test_models.py  test_simple.py
prompts/: INTEGRATION.md  README.md  STRUCTURE.md  demo_yaml_integration.py  generate_config.py  pyproject.toml  setup_and_demo.sh  test_yaml_configs.py
prompts/config/: default.yaml  default_prompts.yaml
prompts/config_examples/: README.md
prompts/prompts/: __init__.py  cli.py
prompts/registry/: README.md
prompts/strategies/: README.md
prompts/templates/: README.md
prompts/tests/: README.md  __init__.py  test_prompt_system.py
prompts/utils/: README.md
rag/: .gitignore  .schema_cache  README.md  SETUP_GUIDE.md  api.py  claude.md  cli.py  create_test_pdf.py  default_strategies.yaml  example.py  example_api_usage.py  example_retrieval_usage.py  pyproject.toml  quick_extractor_demo.sh  rag_config.json  requirements.txt  schema.yaml  setup_and_demo.sh  small_sample.csv  test_extractors.sh  test_retrieval_system.py  test_system.py
rag/cli/: README.md  __init__.py  compile.py  components.py
rag/components/: __init__.py
rag/config/: default.yaml
rag/config_examples/: advanced_retrieval_config.json  advanced_retrieval_config.yaml  basic_config.json  basic_config.yaml  basic_with_retrieval_config.json  basic_with_retrieval_config.yaml  custom_csv_config.json  custom_csv_config.yaml  enterprise_document_management_config.json  enterprise_document_management_config.yaml  extractors_demo_config.json  extractors_demo_config.yaml  flexible_paths_config.json  hybrid_universal_config.json  metadata_filtered_config.json  multi_query_retrieval_config.json  new_schema_with_extractors.yaml  pdf_config.json  pdf_config.yaml  pdf_separate_pages_config.json  pdf_separate_pages_config.yaml  pdf_with_retrieval_config.json  production_config.json  rank_fusion_hybrid_config.json  reranked_strategy_config.json  strategy_aliases_config.json  unified_multi_strategy_config.json  unified_multi_strategy_config.yaml  universal_retrieval_config.json
rag/core/: __init__.py  base.py  document_manager.py  enhanced_pipeline.py  extractor_integration.py  factories.py
rag/demos/: DEMO_README.md  README.md  demo1_research_papers_cli.py  demo2_customer_support_cli.py  demo3_code_documentation.py  demo3_code_documentation_cli.py  demo4_news_analysis.py  demo5_business_reports.py  demo6_document_management.py  demo_strategies.yaml  run_all_cli_demos.py
rag/docs/: COMPONENTS.md  DATABASE_MAINTENANCE_STRATEGIES.md  DEDUPLICATION.md  METADATA_BEST_PRACTICES.md  STRATEGY_SYSTEM.md  STRATEGY_SYSTEM_SUMMARY.md  STRUCTURE.md
rag/embedders/: __init__.py  ollama_embedder.py
rag/examples/: example.py  example_api_usage.py  example_retrieval_usage.py  test_retrieval_system.py  test_system.py
rag/extractors/: README.md  __init__.py  base.py  datetime_extractor.py  entity_extractor.py  keyword_extractors.py  statistics_extractor.py
rag/parsers/: __init__.py  csv_parser.py  pdf_parser.py
rag/retrieval/: README.md  __init__.py  factory.py  registry.py
rag/samples/: aircraft_maintenance_strategies.yaml  customer_support_strategies.yaml  legal_finance_strategies.yaml  medical_assistant_strategies.yaml  simple_to_complex_strategies.yaml
rag/schemas/: README.md  VALIDATOR_INTEGRATION.md  consolidated.yaml  embedders.yaml  extractors.yaml  parsers.yaml  retrievers.yaml  schema.yaml  stores.yaml  strategies.yaml  strategy_schema.yaml
rag/scripts/: VALIDATION_README.md  consolidate_schemas.py  quick_extractor_demo.sh  schema_validator.py  smart_schema_validator.py  test_strategy_loader.py  test_validator.py  update_all_components.py  update_component_schemas.py
rag/stores/: __init__.py  capabilities.py  chroma_store.py
server/: .pre-commit-config.yaml  Dockerfile  README.md  llamafarm.yaml  main.py  project.json  pyproject.toml
(+634 files in other folders)
