[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "agents", "services", "background"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.7",
    "uvicorn>=0.35.0",
    "atomic-agents>=0.1.0",
    "openai>=1.0.0",
    "instructor>=1.0.0",
    "urllib3==1.26.20",
    "six>=1.16.0",
    "requests>=2.25.0",

]

[tool.ruff]
line-length = 88  # Match Black's default
target-version = "py311"

# Enable auto-fixes
fix = true

# Select rulesets (examples: E for pycodestyle, F for pyflakes, I for isort, B for bugbear)
lint.select = ["E", "F", "I", "B", "UP", "SIM"]

# Exclude some files
exclude = ["migrations", ".venv", "venv", "build", "dist"]

# Optional: treat warnings as errors
# force-exclude = true